Main page : fixed see-more overlaping, Project / Lab : Reorganised projects

--- a/src/css/_button.scss
+++ b/src/css/_button.scss
@@ -313,6 +313,7 @@
         display: block;
         position: absolute;
         bottom: -2px;
+        left: 0;
         width: 75%;
         height: 1px;
         background-color: $color-red;
